--- a/id.html
+++ b/id.html
@@ -50,6 +50,9 @@
         <video muted="muted" playsinline="playsinline" width="19%" height="15.5%" loop class="flag_video" autoplay muted>
             <source src="assets/video/izbpCqH.mp4" type="video/mp4">
         </video>
+        <video muted="muted" playsinline="playsinline" width="19%" height="15.5%" loop class="flag_video" autoplay muted>
+            <source src="assets/video/izbpCqH.mp4" type="video/orzel-ezgif.com-crop_1.gif">
+        </video>
         <div class="id_data_grid">
             <div class="data_holder">
                 <p class="data_title firstname"></p>
