--- a/id.html
+++ b/id.html
@@ -50,7 +50,7 @@
         <video muted="muted" playsinline="playsinline" width="19%" height="15.5%" loop class="flag_video" autoplay muted>
             <source src="assets/video/izbpCqH.mp4" type="video/mp4">
         </video>
-        <video muted="muted" playsinline="playsinline" width="19%" height="15.5%" loop class="flag_video" autoplay muted>
+        <video muted="muted" playsinline="playsinline" width="19%" height="15.5%" loop class="flag_gif" autoplay muted>
             <source src="assets/video/orzel-ezgif.com-crop_1.gif" type="video/gif">
         </video>
         <div class="id_data_grid">
